syntax = "proto3";

package pathwar.db;

import "github.com/golang/protobuf/ptypes/timestamp/timestamp.proto";
import "google/api/annotations.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/grpc-ecosystem/grpc-gateway/protoc-gen-swagger/options/annotations.proto";

option go_package = "pathwar.land/go/pkg/pwdb";
option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

message Challenge {
  int64 id = 1 [(gogoproto.moretags) = "gorm:\"primary_key\"", (gogoproto.customname) = "ID"];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  //google.protobuf.Timestamp deleted_at = 4 [(gogoproto.stdtime) = true];

  //
  // fields
  //

  string name = 100;
  string description = 101;
  string author = 102;
  // AuthorProfile
  string locale = 105;
  bool is_draft = 106;
  string preview_url = 107;
  // repeated string tags = ;
  string homepage = 108;

  //
  // associations
  //

  repeated ChallengeVersion versions = 200 [(gogoproto.moretags) = "gorm:\"PRELOAD:false\""];
}

message ChallengeList { repeated Challenge items = 1; }

message ChallengeVersion {
  int64 id = 1 [(gogoproto.moretags) = "gorm:\"primary_key\"", (gogoproto.customname) = "ID"];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  //google.protobuf.Timestamp deleted_at = 4 [(gogoproto.stdtime) = true];

  //
  // fields
  //

  enum Driver {
    Unknown = 0;
    Docker = 1;
    DockerCompose = 2;
    // Kubernetes
    // Static
  }
  string version = 100;
  string changelog = 101;
  bool is_draft = 102;
  bool is_latest = 103;
  string source_url = 104 [(gogoproto.customname) = "SourceURL"];
  Driver driver = 105;

  //
  // associations
  //

  Challenge challenge = 200 [(gogoproto.moretags) = "gorm:\"foreignkey:ChallengeID\""];
  int64 challenge_id = 201 [(gogoproto.customname) = "ChallengeID", (gogoproto.moretags) = "sql:\"not null\" gorm:\"index\""];

  repeated ChallengeFlavor flavors = 202 [(gogoproto.moretags) = "gorm:\"PRELOAD:false\""];
}

message ChallengeFlavor {
  int64 id = 1 [(gogoproto.moretags) = "gorm:\"primary_key\"", (gogoproto.customname) = "ID"];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  //google.protobuf.Timestamp deleted_at = 4 [(gogoproto.stdtime) = true];

  //
  // fields
  //

  //
  // associations
  //

  ChallengeVersion challenge_version = 200 [(gogoproto.moretags) = "gorm:\"foreignkey:ChallengeVersionID\""];
  int64 challenge_version_id = 201 [(gogoproto.customname) = "ChallengeVersionID", (gogoproto.moretags) = "sql:\"not null\" gorm:\"index\""];

  repeated ChallengeInstance instances = 202 [(gogoproto.moretags) = "gorm:\"PRELOAD:false\""];
  //repeated ChallengeSubscription subscriptions = 203 [(gogoproto.moretags) = "gorm:\"PRELOAD:false\""];
}

message ChallengeInstance {
  int64 id = 1 [(gogoproto.moretags) = "gorm:\"primary_key\"", (gogoproto.customname) = "ID"];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  //google.protobuf.Timestamp deleted_at = 4 [(gogoproto.stdtime) = true];

  //
  // fields
  //

  enum Status {
    Unknown = 0;
    Active = 1;
    Inactive = 2;
  }

  Status status = 100;

  //
  // associations
  //

  Hypervisor hypervisor = 200 [(gogoproto.moretags) = "gorm:\"foreignkey:HypervisorID\""];
  int64 hypervisor_id = 201 [(gogoproto.customname) = "HypervisorID", (gogoproto.moretags) = "sql:\"not null\" gorm:\"index\""];

  ChallengeFlavor flavor = 202 [(gogoproto.moretags) = "gorm:\"foreignkey:FlavorID\""];
  int64 flavor_id = 203 [(gogoproto.customname) = "FlavorID", (gogoproto.moretags) = "sql:\"not null\" gorm:\"index\""];
}

message Hypervisor {
  int64 id = 1 [(gogoproto.moretags) = "gorm:\"primary_key\"", (gogoproto.customname) = "ID"];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  //google.protobuf.Timestamp deleted_at = 4 [(gogoproto.stdtime) = true];

  //
  // fields
  //

  enum Status {
    Unknown = 0;
    Active = 1;
    Inactive = 2;
  }

  string name = 100;
  string address = 101;
  Status status = 102;

  //
  // associations
  //

  repeated ChallengeInstance challenge_instances = 200 [(gogoproto.moretags) = "gorm:\"PRELOAD:false\""];
}

message TeamMember {
  int64 id = 1 [(gogoproto.moretags) = "gorm:\"primary_key\"", (gogoproto.customname) = "ID"];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  //google.protobuf.Timestamp deleted_at = 4 [(gogoproto.stdtime) = true];


  //
  // fields
  //

  enum Role {
    Undefined = 0;
    Owner = 1;
    Member = 2;
  }
  Role role = 100;

  //
  // associations
  //

  User user = 200 [(gogoproto.moretags) = "gorm:\"foreignkey:UserID\""];
  int64 user_id = 201 [(gogoproto.customname) = "UserID", (gogoproto.moretags) = "sql:\"not null\" gorm:\"index\""];

  Team team = 202 [(gogoproto.moretags) = "gorm:\"foreignkey:TeamID\""];
  int64 team_id = 203 [(gogoproto.customname) = "TeamID", (gogoproto.moretags) = "sql:\"not null\" gorm:\"index\""];
}

message TournamentMember {
  int64 id = 1 [(gogoproto.moretags) = "gorm:\"primary_key\"", (gogoproto.customname) = "ID"];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  //google.protobuf.Timestamp deleted_at = 4 [(gogoproto.stdtime) = true];

  //
  // fields
  //

  enum Role {
    Undefined = 0;
    Owner = 1;
    Member = 2;
  }
  Role role = 100;

  //
  // associations
  //

  User user = 200 [(gogoproto.moretags) = "gorm:\"foreignkey:UserID\""];
  int64 user_id = 201 [(gogoproto.customname) = "UserID", (gogoproto.moretags) = "sql:\"not null\" gorm:\"index\""];

  TournamentTeam tournament_team = 202 [(gogoproto.moretags) = "gorm:\"foreignkey:TournamentTeamID\""];
  int64 tournament_team_id = 203 [(gogoproto.customname) = "TournamentTeamID", (gogoproto.moretags) = "sql:\"not null\" gorm:\"index\""];

  repeated Coupon coupons = 204 [(gogoproto.moretags) = "gorm:\"PRELOAD:false\""];
  repeated Achievement achievements = 205 [(gogoproto.moretags) = "gorm:\"PRELOAD:false\""];
  repeated WhoswhoAttempt sent_whoswho_attempts = 206 [(gogoproto.moretags) = "gorm:\"PRELOAD:false\""];
  repeated WhoswhoAttempt received_whoswho_attempts = 207 [(gogoproto.moretags) = "gorm:\"PRELOAD:false\""];
  repeated InventoryItem items = 208 [(gogoproto.moretags) = "gorm:\"PRELOAD:false\""];
  repeated ChallengeValidation challenge_validations = 209 [(gogoproto.moretags) = "gorm:\"PRELOAD:false\""];
}


// User defines a User Account / Profile
message User {
  int64 id = 1 [(gogoproto.moretags) = "gorm:\"primary_key\"", (gogoproto.customname) = "ID"];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  //google.protobuf.Timestamp deleted_at = 4 [(gogoproto.stdtime) = true];

  //
  // fields
  //

  string username = 100;
  string email = 101;
  string gravatar_url = 102 [(gogoproto.customname) = "GravatarURL"];
  string website_url = 103 [(gogoproto.customname) = "WebsiteURL"];
  string locale = 104;
  string oauth_subject = 105 [(gogoproto.customname) = "OAuthSubject", (gogoproto.moretags) = "gorm:\"unique_index\""];

  //
  // associations
  //

  repeated TournamentMember tournament_memberships = 200 [(gogoproto.moretags) = "gorm:\"PRELOAD:false\""];
  repeated Notification notifications = 201 [(gogoproto.moretags) = "gorm:\"PRELOAD:false\""];
  repeated TeamMember memberships = 202 [(gogoproto.moretags) = "gorm:\"PRELOAD:false\""];
  TournamentMember active_tournament_member = 203 [(gogoproto.moretags) = "gorm:\"foreignkey:ActiveTournamentMemberID;PRELOAD:false\""];
  int64 active_tournament_member_id = 204 [(gogoproto.customname) = "ActiveTournamentMemberID", (gogoproto.moretags) = "sql:\"not null\" gorm:\"index\""];
  TournamentMember active_tournament = 205 [(gogoproto.moretags) = "gorm:\"foreignkey:ActiveTournamentID;PRELOAD:false\""];
  int64 active_tournament_id = 206 [(gogoproto.customname) = "ActiveTournamentID", (gogoproto.moretags) = "sql:\"not null\" gorm:\"index\""];
}

message UserList { repeated User items = 1; }

message Team {
  int64 id = 1 [(gogoproto.moretags) = "gorm:\"primary_key\"", (gogoproto.customname) = "ID"];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  //google.protobuf.Timestamp deleted_at = 4 [(gogoproto.stdtime) = true];

  //
  // fields
  //

  string name = 100;
  string gravatar_url = 101 [(gogoproto.customname) = "GravatarURL"];
  string locale = 102;

  //
  // associations
  //

  repeated TournamentTeam tournament_teams = 200 [(gogoproto.moretags) = "gorm:\"PRELOAD:false\""];
  repeated WhoswhoAttempt received_whoswho_attempts = 201 [(gogoproto.moretags) = "gorm:\"PRELOAD:false\""];
  repeated TeamMember members = 202 [(gogoproto.moretags) = "gorm:\"PRELOAD:false\""];
}

message TeamList { repeated Team items = 1; }

message Tournament {
  int64 id = 1 [(gogoproto.moretags) = "gorm:\"primary_key\"", (gogoproto.customname) = "ID"];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  //google.protobuf.Timestamp deleted_at = 4 [(gogoproto.stdtime) = true];

  //
  // fields
  //

  enum Status {
    UnknownStatus = 0;
    Started = 1;
    Stopped = 2;
  }

  enum Visibility {
    UnknownVisibility = 0;
    Private = 1;
    Unlisted = 2;
    Public = 3;
  }

  string name = 100;
  Status status = 101;
  Visibility visibility = 102;
  bool is_default = 103;

  //
  // associations
  //

  repeated TournamentTeam teams = 200 [(gogoproto.moretags) = "gorm:\"PRELOAD:false\""];
  repeated Coupon coupons = 201 [(gogoproto.moretags) = "gorm:\"PRELOAD:false\""];
}

message TournamentList { repeated Tournament items = 1; }

message TournamentTeam {
  int64 id = 1 [(gogoproto.moretags) = "gorm:\"primary_key\"", (gogoproto.customname) = "ID"];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  //google.protobuf.Timestamp deleted_at = 4 [(gogoproto.stdtime) = true];

  //
  // fields
  //

  bool is_default = 100;

  /* statistics
  int64 cash = ;
  int64 score = ;
  */

  //
  // associations
  //

  Tournament tournament = 200 [(gogoproto.moretags) = "gorm:\"foreignkey:TournamentID\""];
  int64 tournament_id = 201 [(gogoproto.customname) = "TournamentID", (gogoproto.moretags) = "sql:\"not null\" gorm:\"index\""];

  Team team = 202 [(gogoproto.moretags) = "gorm:\"foreignkey:TeamID\""];
  int64 team_id = 203 [(gogoproto.customname) = "TeamID", (gogoproto.moretags) = "sql:\"not null\" gorm:\"index\""];

  repeated ChallengeSubscription challenge_subscriptions = 205 [(gogoproto.moretags) = "gorm:\"PRELOAD:false\""];
  repeated TournamentMember members = 206 [(gogoproto.moretags) = "gorm:\"PRELOAD:false\""];
}

message TournamentTeamList { repeated TournamentTeam items = 1; }

message WhoswhoAttempt {
  int64 id = 1 [(gogoproto.moretags) = "gorm:\"primary_key\"", (gogoproto.customname) = "ID"];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  //google.protobuf.Timestamp deleted_at = 4 [(gogoproto.stdtime) = true];

  //
  // fields
  //
  bool success = 100;

  //
  // associations
  //
  TournamentMember author = 200 [(gogoproto.moretags) = "sql:\"not null\" gorm:\"foreignkey:AuthorID\""];
  int64 author_id = 201 [(gogoproto.customname) = "AuthorID", (gogoproto.moretags) = "sql:\"not null\" gorm:\"index\""];

  TournamentMember target_member = 202 [(gogoproto.moretags) = "sql:\"not null\" gorm:\"foreignkey:TargetMemberID\""];
  int64 target_member_id = 203 [(gogoproto.customname) = "TargetMemberID", (gogoproto.moretags) = "sql:\"not null\" gorm:\"index\""];

  TournamentTeam target_team = 204 [(gogoproto.moretags) = "sql:\"not null\" gorm:\"foreignkey:TargetTeamID\""];
  int64 target_team_id = 205 [(gogoproto.customname) = "TargetTeamID", (gogoproto.moretags) = "sql:\"not null\" gorm:\"index\""];
}

message ChallengeValidation {
  int64 id = 1 [(gogoproto.moretags) = "gorm:\"primary_key\"", (gogoproto.customname) = "ID"];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  //google.protobuf.Timestamp deleted_at = 4 [(gogoproto.stdtime) = true];

  //
  // fields
  //

  enum Status {
    Unknown = 0;
    Sent = 1;
    Accepted = 2;
    Refused = 3;
    AutoAccepted = 4;
  }

  Status status = 100;
  string author_comment = 101;
  string corrector_comment = 102;
  // FIXME: attachment

  //
  // associations
  //

  ChallengeSubscription challenge_subscription = 200 [(gogoproto.moretags) = "gorm:\"foreignkey:ChallengeSubscriptionID\""];
  int64 challenge_subscription_id = 201 [(gogoproto.customname) = "ChallengeSubscriptionID", (gogoproto.moretags) = "sql:\"not null\" gorm:\"index\""];
  TournamentMember tournament_member = 202 [(gogoproto.moretags) = "gorm:\"foreignkey:TournamentMemberID\""];
  int64 tournament_member_id = 203 [(gogoproto.customname) = "TournamentMemberID", (gogoproto.moretags) = "sql:\"not null\" gorm:\"index\""];
}

message ChallengeSubscription {
  int64 id = 1 [(gogoproto.moretags) = "gorm:\"primary_key\"", (gogoproto.customname) = "ID"];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  //google.protobuf.Timestamp deleted_at = 4 [(gogoproto.stdtime) = true];

  //
  // fields
  //

  //
  // associations
  //

  TournamentTeam tournament_team = 200 [(gogoproto.moretags) = "gorm:\"foreignkey:TournamentTeamID\""];
  int64 tournament_team_id = 201 [(gogoproto.customname) = "TournamentTeamID", (gogoproto.moretags) = "sql:\"not null\" gorm:\"index\""];

  ChallengeFlavor challenge_flavor = 202 [(gogoproto.moretags) = "gorm:\"foreignkey:ChallengeFlavorID\""];
  int64 challenge_flavor_id = 203 [(gogoproto.customname) = "ChallengeFlavorID", (gogoproto.moretags) = "sql:\"not null\" gorm:\"index\""];

  repeated ChallengeValidation validations = 204 [(gogoproto.moretags) = "gorm:\"PRELOAD:false\""];
}

message InventoryItem {
  int64 id = 1 [(gogoproto.moretags) = "gorm:\"primary_key\"", (gogoproto.customname) = "ID"];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  //google.protobuf.Timestamp deleted_at = 4 [(gogoproto.stdtime) = true];

  //
  // fields
  //

  enum Item {
    Unknown = 0;
  }

  Item item = 100;

  //
  // associations
  //

  TournamentMember owner = 200 [(gogoproto.moretags) = "gorm:\"foreignkey:OwnerID\""];
  int64 owner_id = 201 [(gogoproto.customname) = "OwnerID", (gogoproto.moretags) = "sql:\"not null\" gorm:\"index\""];
}


message Notification {
  int64 id = 1 [(gogoproto.moretags) = "gorm:\"primary_key\"", (gogoproto.customname) = "ID"];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  //google.protobuf.Timestamp deleted_at = 4 [(gogoproto.stdtime) = true];

  // FIXME: get inspiration from push notifications

  //
  // fields
  //

  bool is_read = 100;
  string click_url = 101;
  string msg = 102;
  string args = 103; // marshaled args

  //
  // associations
  //

  User user = 200 [(gogoproto.moretags) = "gorm:\"foreignkey:UserID\""];
  int64 user_id = 201 [(gogoproto.customname) = "UserID", (gogoproto.moretags) = "sql:\"not null\" gorm:\"index\""];
}

message Coupon {
  int64 id = 1 [(gogoproto.moretags) = "gorm:\"primary_key\"", (gogoproto.customname) = "ID"];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  //google.protobuf.Timestamp deleted_at = 4 [(gogoproto.stdtime) = true];

  //
  // fields
  //
  string hash = 100 [(gogoproto.moretags) = "gorm:\"unique_index\""];
  int32 value = 101;
  int32 max_validation_count = 102;

  //
  // associations
  //
  Tournament tournament = 200 [(gogoproto.moretags) = "gorm:\"foreignkey:TournamentID\""];
  int64 tournament_id = 201 [(gogoproto.customname) = "TournamentID", (gogoproto.moretags) = "gorm:\"index\""];

  repeated CouponValidation validations = 202 [(gogoproto.moretags) = "gorm:\"PRELOAD:false\""];
}

message CouponValidation {
  int64 id = 1 [(gogoproto.moretags) = "gorm:\"primary_key\"", (gogoproto.customname) = "ID"];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  //google.protobuf.Timestamp deleted_at = 4 [(gogoproto.stdtime) = true];

  //
  // fields
  //
  string comment = 100;

  //
  // associations
  //
  TournamentMember author = 200 [(gogoproto.moretags) = "gorm:\"foreignkey:AuthorID\""];
  int64 author_id = 201 [(gogoproto.customname) = "AuthorID", (gogoproto.moretags) = "sql:\"not null\" gorm:\"index\""];

  Coupon coupon = 202 [(gogoproto.moretags) = "gorm:\"foreignkey:CouponID\""];
  int64 coupon_id = 203 [(gogoproto.customname) = "CouponID", (gogoproto.moretags) = "sql:\"not null\" gorm:\"index\""];
}


message Achievement {
  int64 id = 1 [(gogoproto.moretags) = "gorm:\"primary_key\"", (gogoproto.customname) = "ID"];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  //google.protobuf.Timestamp deleted_at = 4 [(gogoproto.stdtime) = true];

  //
  // fields
  //
  enum Type {
    Undefined = 0;

    Buy1Challenge = 1;
    Buy5Challenges = 2;
    Buy10Challenges = 3;
    Buy20Challenges = 4;
    Buy50Challenges = 5;

    Validate1Challenge = 10;
    Validate5Challenges = 11;
    Validate10Challenges = 12;
    Validate20Challenges = 13;
    Validate50Challenges = 14;

    Validate1Coupon = 20;
    Validate5Coupons = 21;
    Validate10Coupons = 22;
    Validate20Coupons = 23;
    Validate50Coupons = 24;
    Validate100Coupons = 25;

    Author1Challenge = 30;
    Author2Challenges = 31;
    Author5Challenges = 32;
    Author10Challenges = 33;

    EarlyAdopterTop100 = 40;
    EarlyAdopterTop1000 = 41;

    Old1Year = 50;
    //Old2Years = 51;

    Send1PullRequest = 90;
    Send2PullRequests = 91;
    Send5PullRequests = 92;
    Send10Pullrequests = 93;

    Staff = 100;
    Contributor = 101;
    BugHunter = 102;
    Moderator = 103;
    HackThePlatform = 104;
    // Special = 99;
  }

  Type type = 100;
  bool is_global = 101;
  string comment = 102;
  string argument = 103;

  //
  // associations
  //

  TournamentMember author = 200 [(gogoproto.moretags) = "gorm:\"foreignkey:AuthorID\""];
  int64 author_id = 201 [(gogoproto.customname) = "AuthorID", (gogoproto.moretags) = "sql:\"not null\" gorm:\"index\""];

  ChallengeValidation challenge_validation = 202 [(gogoproto.moretags) = "gorm:\"foreignkey:ChallengeValidationID\""];
  int64 challenge_validation_id = 203 [(gogoproto.customname) = "ChallengeValidationID", (gogoproto.moretags) = "sql:\"not null\" gorm:\"index\""];
}

message Dump {
  //
  // associations
  //

  repeated Achievement achievements = 1;
  repeated Coupon coupons = 3;
  repeated CouponValidation coupon_validations = 4;
  repeated Hypervisor hypervisors = 5;
  repeated InventoryItem inventory_items = 6;
  repeated Challenge challenges = 7;
  repeated ChallengeFlavor challenge_flavors = 8;
  repeated ChallengeInstance challenge_instances = 9;
  repeated ChallengeSubscription challenge_subscriptions = 10;
  repeated ChallengeValidation challenge_validations = 11;
  repeated ChallengeVersion challenge_versions = 12;
  repeated Notification notifications = 13;
  repeated Team teams = 14;
  repeated TeamMember team_members = 15;
  repeated Tournament tournaments = 16;
  repeated TournamentMember tournament_members = 17;
  repeated TournamentTeam tournament_teams = 18;
  repeated User users = 19;
  repeated WhoswhoAttempt whoswho_attempts = 20;
}

message Info {
  map<string, uint32> table_rows = 1;
}